--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "16 || 18"
   },
   "dependencies": {
-    "@redux-devtools/extension": "3.2.5",
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.1.1",
@@ -16,7 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
   "scripts": {
