--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.0.0-alpha3",
     "crypto-js": "^4.1.1",
+    "node-scss": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass-loader": "^13.2.0"
   },
   "scripts": {
     "cy": "env CY_CLI=true cypress run",
